# DYHT

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: myclouds.png.placeholder
src/: App.css  App.jsx  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  audio.rs  audit.rs  config.rs  main.rs  memory.rs  security.rs
src/components/: BackgroundLayer.css  BackgroundLayer.jsx  DwightPersonaPanel.css  DwightPersonaPanel.jsx  MainAudioPanel.css  MainAudioPanel.jsx
